profilelist1exp/unpackaged/objects/Specialist_Supported_Products__c.object
<CustomObject>
    <description>SOM R15.10 - object to maintain Opportunity Team Member and the Produc that they support</description>
    <fields>
        <fullName>Opportunity_Product_GUID__c</fullName>
        <description>CR10618 - Hidden field. Value to be populate by Save button in “Update Supported Products”  vf page</description>
        <label>Opportunity Product GUID</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Opportunity_Product__c</fullName>
        <description>CR10618 - formula field so that user can load Opportunity Product detail page from Opportunity - Specialist Supported Products related list</description>
        <formula>HYPERLINK(&quot;/&quot;&amp; Opportunity_Product_GUID__c, Product__r.Name)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Opportunity Product</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Opportunity_Team_Member__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>SOM R15.10 - Field create as part of CR10011</description>
        <label>Opportunity Team Member</label>
        <referenceTo>User</referenceTo>
        <relationshipName>User_Supported_Product</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Opportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>SOM R15.10 - Field create as part of CR10011</description>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Specialist Supported Products</relationshipLabel>
        <relationshipName>User_Supported_Product</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Product_Line_Description__c</fullName>
        <description>SOM R15.10 - Field create as part of CR10011</description>
        <formula>Product__r.Product_Line_Desc__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Product Line Description</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>SOM R15.10 - Field create as part of CR10011</description>
        <label>Product</label>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>Specialist Supported Products</relationshipLabel>
        <relationshipName>User_Supported_Product</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SSP_ID__c</fullName>
        <description>CR10618 - formula field so that user can load “Update Supported Products”  vf page from Opportunity - Specialist Supported Products related list</description>
        <formula>HYPERLINK(&quot;apex/VFSpecialistSupportedProduct?sspId=&quot;&amp;Id&amp;&quot;&amp;oppId=&quot;&amp;Opportunity__c, Name)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>SSP ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Supporting__c</fullName>
        <description>SOM R15.10 - Field create as part of CR10011</description>
        <label>Supporting?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Specialist Supported Products</label>
    <nameField>
        <displayFormat>SSP-{0000}</displayFormat>
        <label>Specialist Supported Product</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Specialist Supported Products</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>